# AI-Health-Fitness-Planner

./: .gitignore  .replit  ENVIRONMENT_SETUP.md  README.md  RLS_SETUP_GUIDE.md  SETUP_GUIDE.md  adaptive_logic.py  app.py  database.py  database_policies.sql  nav.py  openai_service.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-Role-You-are-a-senior-product-engineering-agent-Ship-a-minimal-robust-end-to-end-fitness-lifes-1761487907733_1761487907734.txt
pages/: 00_login.py  01_onboarding.py  02_equipment.py  03_pantry.py  04_schedule.py  05_weekly_plan.py  06_today.py  07_progress.py  08_settings.py
static/: theme.css
